# iroh-drop

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  protocol.rs
